Announcement App UI Issue in images getting stretched

--- a/apps/Announcements/index.scss
+++ b/apps/Announcements/index.scss
@@ -39,11 +39,12 @@ html, body {
   height:100%;
   background-color: grey;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 #Announ-visual {
-  max-width: 100%; 
-  height: 99%;
+  max-width: 100%;
   margin-top: 2px;
   object-fit: cover;
   object-position: center;
